--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ﻿pandas==2.2.3
-google-ai-generativelanguage==0.6.10
+google-generativeai==0.6.10
 streamlit==1.42.1
 requests==2.32.3
 pillow==11.0.0
